# obj-det-test

./: .gitignore  hello.py  pyproject.toml
documentation/: plot_runs_722_723.py  progress.md  slides.aux  slides.nav  slides.out  slides.tex  slides.toc
documentation/hparams_v5/: generate_plots.py  report.md
inference/: make_sequence_grid.py  swa_merge_eval.py  test_eval.py  visualize.py
inference/test_results_baseline_loss-old/: metrics.json  metrics_report.txt
inference/test_results_conf47_iou45/: metrics.json  metrics_report.txt
inference/test_results_iou45/: metrics.json  metrics_report.txt
inference/test_results_no_pu/: metrics.json  metrics_report.txt
inference/test_results_pu/: metrics_report.txt
inference/test_results_v5_ciou_tal_ohem/: metrics.json  metrics_report.txt
inference/test_results_v6/: metrics.json  (+1 more)
model/: __init__.py  head.py  iou_loss.py  loss.py  pan.py  pu_loss.py  yoloe.py
optuna_studies/: yoloe_hparam_search.db  yoloe_hparam_search_v2.db  yoloe_hparam_search_v3.db  yoloe_hparam_search_v4.db  yoloe_hparam_search_v5.db
slurm-script/: test_eval_v5_ciou_tal_ohem.sh  test_eval_v5_ciou_tal_ohem_05.sh  test_eval_v5_ciou_tal_ohem_conf35.sh  test_eval_v5_ciou_tal_ohem_conf38.sh  test_eval_v6.sh  train.sh  train_v5_p3p4p5.sh  tune_hyperparams.sh  tune_hyperparams_v3.sh  tune_hyperparams_v4.sh  tune_hyperparams_v5.sh  tune_hyperparams_v6.sh
test/: test_aug_contrast.py  test_dataloader.py
train/: train.py  tune_hyperparams.py  tune_hyperparams_v3.py  tune_hyperparams_v4.py  tune_hyperparams_v5.py
utils/: metrics.py  plots.py
(+319 files in other folders)
